--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -60,6 +60,27 @@
                     <input id="txtsalary" [(ngModel)]="newEmployee.salary" type="number" name="name" placeholder="Enter Salary" class="form-control"/>
                 </div>
               </div>
+              <div class="form-group row">
+                
+                <label for="txtpicture" class="col-sm-4 col-form-label">Picture</label>
+                <div class="col-sm-8">
+                <input id="txtpicture"[(ngModel)]="newEmployee.picture"(change)="onChange($event)" type="file"name="files"placeholder="Select Image"class="form-control" />
+              </div>
+              </div>
+              <div *ngIf="myimage">
+                <img [src]="myimage" width="200px" height="200px" alt="" />
+
+
+              </div>
+              <!-- <div class="col-sm-4">
+                *ngIf(Model.Picture !=null)
+                var base64=convert.Tobase64string(Model.Picture)
+                var imgsrc=string.Format("data:image/jpg,(0)",base64);
+        
+                
+                
+
+              </div> -->
             </div>
             <!-- <footeer> -->
             <div class="modal-footer">
@@ -108,3 +129,4 @@
       </div>
     </div>
   </div>
+  
