--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -9,6 +9,7 @@
             <th>Name</th>
             <th>Address</th>
             <th>Salary</th>
+            <th>Image</th>
             <th>Actions</th>
 
         </tr>
@@ -18,6 +19,9 @@
     <td>{{employee.name}}</td>
     <td>{{employee.address}}</td>
     <td>{{employee.salary}}</td>
+    <td>
+      <img src={{employee.picture}} width="100" height="75" />
+    </td> 
     <td>
       <button (click)="editclick(employee)" class="btn btn-info m-1" data-toggle="modal" data-target="#editModal">
         <li class="fa fa-edit"></li>
@@ -67,8 +71,8 @@
                 <input id="txtpicture"[(ngModel)]="newEmployee.picture"(change)="onChange($event)" type="file"name="files"placeholder="Select Image"class="form-control" />
               </div>
               </div>
-              <div *ngIf="myimage">
-                <img [src]="myimage" width="200px" height="200px" alt="" />
+              <div *ngIf="picture">
+               <img [src]="picture" width="200px" height="200px" alt="" />
 
 
               </div>
@@ -120,6 +124,18 @@
                 <input id="txtsalary" [(ngModel)]="editEmployee.salary" type="number" name="name" placeholder="Enter Salary" class="form-control"/>
             </div>
           </div>
+          <div class="form-group row">
+                
+            <label for="txtpicture" class="col-sm-4 col-form-label">Picture</label>
+            <div class="col-sm-8">
+            <input id="txtpicture"[(ngModel)]="editEmployee.picture"(change)="onChange($event)" type="file"name="files"placeholder="Select Image"class="form-control" />
+          </div>
+          </div>
+          <div *ngIf="editEmployee.picture">
+            <img [src]="editEmployee.picture" width="200px" height="200px" alt="" />
+
+
+           </div>
         </div>
         <!-- footeer -->
         <div class="modal-footer">
