--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" routerLink="home">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="about">About</a>
       </li>
+      
       <li class="nav-item">
         <a class="nav-link" routerLink="contact">Contact</a>
       </li>
@@ -17,13 +19,13 @@
         <a class="nav-link" routerLink="employee">Employee</a>
       </li>
     </ul>
+    <button *ngIf="loginService.CurrentUsername !=''"(click)="logoutClick()"class="btn btn-outline-success my-2 my-sm-0">LogOut</button>
+      <a class="btn btn-outline-success my-2 my-sm-0" routerLink="login" *ngIf="loginService.CurrentUsername=='' "type="submit">Login</a>
+    
+
+    
   </div>
 </nav>
 <div>
   <router-outlet></router-outlet>
-  <!-- <app-home></app-home>
-  <app-about></app-about>
-  <app-employee></app-employee>
-  <app-contact></app-contact>
-  <app-support></app-support> -->
 </div>
